--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=duoc_springboot_01
+logging.level.root=INFO
+logging.level.org.hibernate=INFO
+logging.level.org.springframework=INFO
+spring.datasource.url=jdbc:oracle:thin:@matrix_high?TNS_ADMIN=/Users/sebastiankravetz/bbdd/Wallet_MATRIX
+spring.datasource.username=SPRINGBOOT01_MATRIX
+spring.datasource.password=V4lh4ll4.2024
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
