--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,10 @@
             <artifactId>ojdbc11</artifactId>
             <version>23.5.0.24.07</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
 
     </dependencies>
 
